<resources>
    <string name="app_name">ToDoList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="term_limit">Term Limit</string>
    <string name="set_date">Date</string>
    <string name="set_time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="add">Add</string>
    <string name="priority">Priority</string>
    <string name="select_priority">Select Priority</string>


    <array name="priority_array">
        <item>Select the priority...</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </array>
</resources>
