

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mobintum.todolist.fragments.AddTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/font_title"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/etTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/font_title"
            android:paddingTop="@dimen/padding_big"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingBottom="@dimen/padding_medium"
            android:id="@+id/etDescription"/>


        <Spinner
            android:paddingTop="@dimen/padding_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/priority"
            android:id="@+id/spinnerPriority"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_limit"
                android:textSize="@dimen/font_title"
                android:paddingRight="@dimen/padding_big"
                android:paddingTop="@dimen/padding_big"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchTerm"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/linearDateTime">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_medium"
                android:paddingRight="@dimen/padding_big"
                android:id="@+id/txtDateTime"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_edit"
                android:id="@+id/btnDateTime"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>